# Motion-Detection

./: .gitignore  CMakeLists.txt  README.md  ff_motion_detection.cpp  pthread_motion_detection.cpp  sequential_motion_detection.cpp
tests/: balance.sh  speedup.sh  test_balance.ods  test_single_step.ods  test_speedup.ods  test_static_dynamic_comparison.ods
utils/: MotionDetector.cpp  utimer.cpp
