cmake_minimum_required(VERSION 2.8)
project( Motion_Detector )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( sequential_motion_detection sequential_motion_detection.cpp )
target_link_libraries( sequential_motion_detection ${OpenCV_LIBS} )
add_executable( pthread_motion_detection pthread_motion_detection.cpp )
target_link_libraries( pthread_motion_detection ${OpenCV_LIBS} )
add_executable( ff_motion_detection ff_motion_detection.cpp )
target_link_libraries( ff_motion_detection ${OpenCV_LIBS} )
set(CMAKE_CXX_FLAGS "-O3 -std=c++20 -pthread")
